--- a/index.html
+++ b/index.html
@@ -218,8 +218,26 @@
         </div>
       </div>
     </main>
-    <footer class="container-fluid mt-5">
-      <span class="me-auto">© 2023 Todos los derechos reservados.</span>
+    <footer class="container-fluid mt-5 mb-1">
+      <p class="text-center fw-bold space-between mt-5 mb-0">
+        Abi Fonzi - Daniela Gangotena - Lautaro Frosio - Martin Malaureille
+      </p>
+      <p class="text-center fw-bold space-between mb-0">Sitio Grupal</p>
+      <p class="text-center fw-bold space-between mb-0">
+        Trabajo grupal Diseño y Desarrollo Web
+      </p>
+      <p class="text-center fw-bold space-between mb-0">
+        Las imágenes cuentan con derechos reservados de Freepik
+      </p>
+      <img
+        class="mb-3 ml-3"
+        src="imagenes/LogoUADE.png"
+        2023
+        Todos
+        los
+        derechos
+        reservados.
+      />
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
