--- a/negocio.html
+++ b/negocio.html
@@ -37,22 +37,28 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" style="justify-content:end;" id="navbarNav">
+        <div
+          class="collapse navbar-collapse"
+          style="justify-content: end"
+          id="navbarNav"
+        >
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link fw-bold" href="index.html">INICIO</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fw-bold"  href="iniciativas.html">INICIATIVAS</a>
+              <a class="nav-link fw-bold" href="iniciativas.html"
+                >INICIATIVAS</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link fw-bold"  href="negocio.html">NEGOCIO</a>
+              <a class="nav-link fw-bold" href="negocio.html">NEGOCIO</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fw-bold"  href="usuario.html">USUARIO</a>
+              <a class="nav-link fw-bold" href="usuario.html">USUARIO</a>
             </li>
             <li class="nav-item">
-             <a class="nav-link fw-bold"href="tuopinion.html">TU OPINIÓN</a>
+              <a class="nav-link fw-bold" href="tuopinion.html">TU OPINIÓN</a>
             </li>
           </ul>
         </div>
@@ -62,140 +68,156 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-12">
-          <h1 class="text-success ms-4 mt-3">Convierte los alimentos no vendidos en ingresos </h1>
-          <p class="text-black fs-3 ms-4">Contanos sobre su negocio para comenzar:</p>
-        </div>
-      </div>
-    </div>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="form-floating mb-3 botonblanco ms-4" style="color: white">
-            <input
-              type="email"
-              class="form-control border border-success rounded-pill"
-              id="floatingInput"
-              placeholder="Dirección de correo electrónico"
-            />
-            <label for="floatingInput">Dirección de correo electrónico</label>
+            <h1 class="text-success ms-4 mt-3">
+              Convierte los alimentos no vendidos en ingresos
+            </h1>
+            <p class="text-black fs-3 ms-4">
+              Contanos sobre su negocio para comenzar:
+            </p>
           </div>
         </div>
       </div>
-    </div>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="form-floating mb-3 botonblanco ms-4" style="color: white">
-            <input
-              type="email"
-              class="form-control border border-success rounded-pill"
-              id="floatingInput"
-              placeholder="Ciudad"
-            />
-            <label for="floatingInput">Ciudad</label>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-6">
+            <div
+              class="form-floating mb-3 botonblanco ms-4"
+              style="color: white"
+            >
+              <input
+                type="email"
+                class="form-control border border-success rounded-pill"
+                id="floatingInput"
+                placeholder="Dirección de correo electrónico"
+              />
+              <label for="floatingInput">Dirección de correo electrónico</label>
+            </div>
           </div>
-          <button type="button"class="rounded-pill btn btn-success fs-3 fw-bold ms-4 mb-3">
-            REGISTRATE AHORA
-          </button>
         </div>
       </div>
-    </div>
-    <div class="container-fluid text-start px-0">
-      <div class="row">
-        <div class="col-md-12" style="position: relative">
-          <img class="img-fluid" src="./imagenes/fondonegocio.jpg">
-          <div>
-          <div class="col-md-4"style="position:absolute; top:10px">
-        <h1 class="text-white ms-4 mt-5">Beneficios de poner tu negocio en nuestra app</h1>
-        <p class="text-white fs-3 ms-4 mt-5">
-          La aplicación permite reducir el desperdicio de alimentos y recuperar
-          dinero con existencias que se habrían desperdiciado: una situación
-          beneficiosa para todos. Además, el 76% de los clientes que descubren
-          una tienda a través de Share Before Waste regresarán como clientes de
-          pago completo. Registrarse es gratis y no pagarás nada a menos que
-          vendas comida a través de la aplicación.
-        </p>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-6">
+            <div
+              class="form-floating mb-3 botonblanco ms-4"
+              style="color: white"
+            >
+              <input
+                type="email"
+                class="form-control border border-success rounded-pill"
+                id="floatingInput"
+                placeholder="Ciudad"
+              />
+              <label for="floatingInput">Ciudad</label>
+            </div>
+            <button
+              type="button"
+              class="rounded-pill btn btn-success fs-3 fw-bold ms-4 mb-3"
+            >
+              REGISTRATE AHORA
+            </button>
+          </div>
+        </div>
       </div>
-    </div>
-    </div>
-  </div>
-</div>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-6 pt-0">
-        <p class="text-dark fs-2 fw-bold ms-4">Cómo funciona</p>
-        <p class="text-dark fs-3 ms-4">
-          Complete el formulario de consulta para registrar su negocio en Share
-          before waste y agregue sus excedentes de comida en la aplicación.
-        </p>
+      <div class="container-fluid text-start px-0">
+        <div class="row">
+          <div class="col-md-12" style="position: relative">
+            <img class="img-fluid" src="./imagenes/fondonegocio.jpg" />
+            <div>
+              <div class="col-md-4" style="position: absolute; top: 10px">
+                <h1 class="text-white ms-4 mt-5">
+                  Beneficios de poner tu negocio en nuestra app
+                </h1>
+                <p class="text-white fs-3 ms-4 mt-5">
+                  La aplicación permite reducir el desperdicio de alimentos y
+                  recuperar dinero con existencias que se habrían desperdiciado:
+                  una situación beneficiosa para todos. Además, el 76% de los
+                  clientes que descubren una tienda a través de Share Before
+                  Waste regresarán como clientes de pago completo. Registrarse
+                  es gratis y no pagarás nada a menos que vendas comida a través
+                  de la aplicación.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-        <div>
-        <button type="button"class= "rounded-pill btn btn-success fs-3 fw-bold ms-4">INSTRUCTIVO</button>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h1 class="text-success mt-3 ms-4">
+              Convierte los alimentos no vendidos en ingresos
+            </h1>
+            <p class="text-black fs-3 ms-4">
+              Cuéntanos sobre tu negocio para comenzar:
+            </p>
+          </div>
+        </div>
       </div>
+
+      <div class="container">
+        <form id="myForm">
+          <div class="row">
+            <div class="col-md-6">
+              <div
+                class="form-floating mb-3 botonblanco ms-4"
+                style="color: white"
+              >
+                <input
+                  type="email"
+                  class="form-control border border-success rounded-pill"
+                  id="emailInput"
+                  placeholder="Dirección de correo electrónico"
+                />
+                <label for="emailInput">Dirección de correo electrónico</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <div
+                  class="form-floating mb-3 botonblanco ms-4"
+                  style="color: white"
+                >
+                  <input
+                    type="text"
+                    class="form-control border border-success rounded-pill"
+                    id="cityInput"
+                    placeholder="Ciudad"
+                  />
+                  <label for="cityInput">Ciudad</label>
+                </div>
+                <button
+                  type="submit"
+                  class="rounded-pill btn btn-success fs-3 fw-bold ms-4 mb-3"
+                >
+                  REGÍSTRATE AHORA
+                </button>
+              </div>
+            </div>
+          </div>
+        </form>
       </div>
-    </div>
-    <div class="container-fluid">
-      <div class="row">
-        <h2 class="text-success fw-bold text-center fs-1">Empresas que trabajan con nosotros</h2>
-        <div
-          id="carouselExampleSlidesOnly"
-          class="carousel slide"
-          data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img
-                src="imagenes/empresa1.png"
-                class="d-block w-100 img-fluid"
-                alt="empresa que usa nuestros servicios"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="imagenes/empresa2.png"
-                class="d-block w-100 img-fluid"
-                alt="empresa que usa nuestros servicios"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="imagenes/empresa3.png"
-                class="d-block w-100 img-fluid"
-                alt="empresa que usa nuestros servicios"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="imagenes/empresa4.png"
-                class="d-block w-100 img-fluid"
-                alt="empresa que usa nuestros servicios"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="imagenes/empresa5.png"
-                class="d-block w-100 img-fluid"
-                alt="empresa que usa nuestros servicios"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="imagenes/empresa6.png"
-                class="d-block w-100 img-fluid"
-                alt="empresa que usa nuestros servicios"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="imagenes/empresa7.png"
-                class="d-block w-100 img-fluid"
-                alt="empresa que usa nuestros servicios"/>
-            </div>
-      </div>
-    </div>
-    </div>
-  </div>
-    <footer class="container-fluid mt-5">
-      <span class="me-auto">© 2023 Todos los derechos reservados.</span>
+    </main>
+    <footer class="container-fluid mt-5 mb-1">
+      <p class="text-center fw-bold space-between mt-5 mb-0">
+        Abi Fonzi - Daniela Gangotena - Lautaro Frosio - Martin Malaureille
+      </p>
+      <p class="text-center fw-bold space-between mb-0">Sitio Grupal</p>
+      <p class="text-center fw-bold space-between mb-0">
+        Trabajo grupal Diseño y Desarrollo Web
+      </p>
+      <p class="text-center fw-bold space-between mb-0">
+        Las imágenes cuentan con derechos reservados de Freepik
+      </p>
+      <img
+        class="mb-3 ml-3"
+        src="imagenes/LogoUADE.png"
+        2023
+        Todos
+        los
+        derechos
+        reservados.
+      />
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
