--- a/tuopinion.html
+++ b/tuopinion.html
@@ -100,7 +100,6 @@
           </div>
         </div>
       </div>
-
       <button
         type="button"
         class="rounded-pill btn btn-success fs-3 fw-bold ms-4 mt-3"
@@ -108,8 +107,26 @@
         ¡SUSCRIBIRME!
       </button>
     </main>
-    <footer class="container-fluid mt-5">
-      <span class="me-auto">© 2023 Todos los derechos reservados.</span>
+    <footer class="container-fluid mt-5 mb-1">
+      <p class="text-center fw-bold space-between mt-5 mb-0">
+        Abi Fonzi - Daniela Gangotena - Lautaro Frosio - Martin Malaureille
+      </p>
+      <p class="text-center fw-bold space-between mb-0">Sitio Grupal</p>
+      <p class="text-center fw-bold space-between mb-0">
+        Trabajo grupal Diseño y Desarrollo Web
+      </p>
+      <p class="text-center fw-bold space-between mb-0">
+        Las imágenes cuentan con derechos reservados de Freepik
+      </p>
+      <img
+        class="mb-3 ml-3"
+        src="imagenes/LogoUADE.png"
+        2023
+        Todos
+        los
+        derechos
+        reservados.
+      />
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
