--- a/negocio.html
+++ b/negocio.html
@@ -135,8 +135,9 @@
             </div>
             <button
               type="button"
-              class="rounded-pill btn fs-3 fw-bold ms-4 mb-3 text-white "
-              style="border-color: #1a4301;background-color:#1a4301";
+              class="rounded-pill btn fs-3 fw-bold ms-4 mb-3 text-white"
+              style="border-color: #1a4301; background-color: #1a4301"
+              ;
               ;
             >
               REGISTRATE AHORA
@@ -170,75 +171,110 @@
           <div class="row">
             <div class="col-md-6 px-5 pt-3">
               <h2>Cómo funciona</h2>
-              <p class="text-black bold fs-3 bold">Complete el formulario de consulta para registrar su negocio en Share before waste
-                 y agregue sus excedentes de comida en la aplicación. </p>
+              <p class="text-black bold fs-3 bold">
+                Complete el formulario de consulta para registrar su negocio en
+                Share before waste y agregue sus excedentes de comida en la
+                aplicación.
+              </p>
             </div>
           </div>
         </div>
         <div class="container-fluid">
           <div class="row">
-            <h2 class=" fw-bold text-center fs-1 mt-5" style="color: #1a4301";>Empresas que trabajan con nosotros</h2>
-            <div
-              id="carouselExampleSlidesOnly"
-              class="carousel slide"
-              data-bs-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img
-                    src="imagenes/empresa1.png"
-                    class="col-md-1 d-block w-100 img-fluid logoempresa"
-                    alt="empresa que usa nuestros servicios"
-                  />
+            <h2 class="fw-bold text-center fs-1 mt-5" style="color: #1a4301" ;>
+              Empresas que trabajan con nosotros
+            </h2>
+            <div class="container text-center my-3">
+              <div class="row mx-auto my-auto justify-content-center">
+                <div id="recipeCarousel" class="carousel slide" data-bs-ride="carousel">
+                  <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item active">
+                      <div class="col-md-3">
+                        <div class="card">
+                          <div class="card-img">
+                            <img src="imagenes/empresa2.png" class="img-fluid" alt="empresa">
+                          </div>
+                          <div class="card-img-overlay"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="carousel-item">
+                      <div class="col-md-3">
+                        <div class="card">
+                          <div class="card-img">
+                            <img src="imagenes/empresa3.png" class="img-fluid" alt="empresa">
+                          </div>
+                          <div class="card-img-overlay"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="carousel-item">
+                      <div class="col-md-3">
+                        <div class="card">
+                          <div class="card-img">
+                            <img src="imagenes/empresa4.png" class="img-fluid" alt="empresa">
+                          </div>
+                          <div class="card-img-overlay"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="carousel-item">
+                      <div class="col-md-3">
+                        <div class="card">
+                          <div class="card-img">
+                            <img src="imagenes/empresa5.png" class="img-fluid" alt="empresa">
+                          </div>
+                          <div class="card-img-overlay"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="carousel-item">
+                      <div class="col-md-3">
+                        <div class="card">
+                          <div class="card-img">
+                            <img src="imagenes/empresa6.png" class="img-fluid" alt="empresa">
+                          </div>
+                          <div class="card-img-overlay"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="carousel-item">
+                      <div class="col-md-3">
+                        <div class="card">
+                          <div class="card-img">
+                            <img src="imagenes/empresa7.png" class="img-fluid" alt="empresa" class="img-fluid">
+                          </div>
+                          <div class="card-img-overlay"></div>
+                        </div>
+                      </div>
+                    </div>
+                  <a class="carousel-control-prev bg-transparent w-aut" href="#recipeCarousel" role="button" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  </a>
+                  <a class="carousel-control-next bg-transparent w-aut" href="#recipeCarousel" role="button" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  </a>
                 </div>
-                <div class="carousel-item">
-                  <img
-                    src="imagenes/empresa2.png"
-                    class="col-md-1 d-block w-100 img-fluid logoempresa"
-                    alt="empresa que usa nuestros servicios"
-                  />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="imagenes/empresa3.png"
-                    class="col-md-1 d-block w-100 img-fluid logoempresa"
-                    alt="empresa que usa nuestros servicios"
-                  />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="imagenes/empresa4.png"
-                    class="col-md-1 d-block w-100 img-fluid logoempresa"
-                    alt="empresa que usa nuestros servicios"
-                  />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="imagenes/empresa5.png"
-                    class="col-md-1 d-block w-100 img-fluid logoempresa"
-                    alt="empresa que usa nuestros servicios"
-                  />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="imagenes/empresa6.png"
-                    class="col-md-1 d-block w-100 img-fluid logoempresa"
-                    alt="empresa que usa nuestros servicios"
-                  />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="imagenes/empresa7.png"
-                    class="col-md-1 d-block w-100 img-fluid logoempresa"
-                    alt="empresa que usa nuestros servicios"/>
-                </div>
+              </div>		
+            </div>
           </div>
-        </div>
-        </div>
-      </div>
-    </main>
-      </div>
-    </main>
-    <footer class="container-fluid mt-5 mb-1">
+            <script>let items = document.querySelectorAll('.carousel .carousel-item')
+
+            items.forEach((el) => {
+              const minPerSlide = 4
+              let next = el.nextElementSibling
+              for (var i=1; i<minPerSlide; i++) {
+                if (!next) {
+                    // wrap carousel by using first child
+                    next = items[0]
+                }
+                let cloneChild = next.cloneNode(true)
+                el.appendChild(cloneChild.children[0])
+                next = next.nextElementSibling
+            }
+        })
+      </script>
+    <footer class="container-fluid  mb-1">
       <p class="texto text-center fw-bold space-between mt-5 mb-0">
         Abi Fonzi - Daniela Gangotena - Lautaro Frosio - Martin Malaureille
       </p>
