--- a/iniciativas.html
+++ b/iniciativas.html
@@ -18,7 +18,7 @@
     <script src="js/iniciativas.js"></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
+    <nav class="navbar navbar-expand-md navbar-light bg-light  py-3 py-lg-1">
       <div class="container">
         <a class="navbar-brand" href="/index.html">
           <img
@@ -44,21 +44,21 @@
           id="navbarNav"
         >
           <ul class="navbar-nav">
-            <li class="nav-item">
+            <li class="nav-item px-4">
               <a class="nav-link fw-bold" href="index.html">INICIO</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item  px-4">
               <a class="nav-link fw-bold" href="iniciativas.html"
                 >INICIATIVAS</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item  px-4">
               <a class="nav-link fw-bold" href="negocio.html">NEGOCIO</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item  px-4">
               <a class="nav-link fw-bold" href="usuario.html">USUARIO</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item  px-4">
               <a class="nav-link fw-bold" href="tuopinion.html">TU OPINIÓN</a>
             </li>
           </ul>
