--- a/negocio.html
+++ b/negocio.html
@@ -15,9 +15,10 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <script src="js/negocio.js"></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
+    <nav class="navbar navbar-expand-md navbar-light bg-light  py-3 py-lg-1">
       <div class="container">
         <a class="navbar-brand" href="/index.html">
           <img
@@ -42,25 +43,25 @@
           style="justify-content: end"
           id="navbarNav"
         >
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link fw-bold" href="index.html">INICIO</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link fw-bold" href="iniciativas.html"
-                >INICIATIVAS</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link fw-bold" href="negocio.html">NEGOCIO</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link fw-bold" href="usuario.html">USUARIO</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link fw-bold" href="tuopinion.html">TU OPINIÓN</a>
-            </li>
-          </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item px-4">
+            <a class="nav-link fw-bold" href="index.html">INICIO</a>
+          </li>
+          <li class="nav-item  px-4">
+            <a class="nav-link fw-bold" href="iniciativas.html"
+              >INICIATIVAS</a
+            >
+          </li>
+          <li class="nav-item  px-4">
+            <a class="nav-link fw-bold" href="negocio.html">NEGOCIO</a>
+          </li>
+          <li class="nav-item  px-4">
+            <a class="nav-link fw-bold" href="usuario.html">USUARIO</a>
+          </li>
+          <li class="nav-item  px-4">
+            <a class="nav-link fw-bold" href="tuopinion.html">TU OPINIÓN</a>
+          </li>
+        </ul>
         </div>
       </div>
     </nav>
@@ -84,7 +85,7 @@
               <input
                 type="text"
                 class="form-control border border-success rounded-pill"
-                id="Name"
+                id="nombredelnegocio"
                 placeholder="Nombre del Negocio"
               />
               <label for="Nameinput">Nombre del Negocio</label>
@@ -97,7 +98,7 @@
           <input
             type="text"
             class="form-control border border-success rounded-pill"
-            id="text"
+            id="numero de teléfono"
             placeholder="Numero de teléfono"
           />
           <label for="Nameinput">Numero de teléfono</label>
@@ -111,7 +112,7 @@
                 type="email"
                 class="form-control border border-success rounded-pill"
                 style="border-color: #1a4301"
-                id="floatingInput"
+                id="correoelectrónico"
                 placeholder="Dirección de correo electrónico"
               />
               <label for="floatingInput">Dirección de correo electrónico</label>
@@ -128,7 +129,7 @@
                 class="form-control border border-success rounded-pill"
                 style="border-color: #1a4301"
                 ;;
-                id="floatingInput"
+                id="ciudad"
                 placeholder="Ciudad"
               />
               <label for="floatingInput">Ciudad</label>
@@ -139,6 +140,7 @@
               style="border-color: #1a4301; background-color: #1a4301"
               ;
               ;
+              onclick="negocio()"
             >
               REGISTRATE AHORA
             </button>
