--- a/usuario.html
+++ b/usuario.html
@@ -17,7 +17,7 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
+    <nav class="navbar navbar-expand-md navbar-light bg-light  py-3 py-lg-1">
       <div class="container">
         <a class="navbar-brand" href="/index.html">
           <img
@@ -42,25 +42,25 @@
           style="justify-content: end"
           id="navbarNav"
         >
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link fw-bold" href="index.html">INICIO</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link fw-bold" href="iniciativas.html"
-                >INICIATIVAS</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link fw-bold" href="negocio.html">NEGOCIO</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link fw-bold" href="usuario.html">USUARIO</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link fw-bold" href="tuopinion.html">TU OPINIÓN</a>
-            </li>
-          </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item px-4">
+            <a class="nav-link fw-bold" href="index.html">INICIO</a>
+          </li>
+          <li class="nav-item  px-4">
+            <a class="nav-link fw-bold" href="iniciativas.html"
+              >INICIATIVAS</a
+            >
+          </li>
+          <li class="nav-item  px-4">
+            <a class="nav-link fw-bold" href="negocio.html">NEGOCIO</a>
+          </li>
+          <li class="nav-item  px-4">
+            <a class="nav-link fw-bold" href="usuario.html">USUARIO</a>
+          </li>
+          <li class="nav-item  px-4">
+            <a class="nav-link fw-bold" href="tuopinion.html">TU OPINIÓN</a>
+          </li>
+        </ul>
         </div>
       </div>
     </nav>
